working grid with a lot of empty spaces

--- a/index.html
+++ b/index.html
@@ -8,28 +8,28 @@
     <link rel="stylesheet" href="./Style/style.css" />
   </head>
   <body>
-    <div class="calculatorGrid">
-      <div class="gbbb">blank box</div>
-      <div class="gbac">AC</div>
-      <div class="gbps">±</div>
-      <div class="gb%">%</div>
-      <div class="gbd">÷</div>
-      <div class="gb7">7</div>
-      <div class="gb8">8</div>
-      <div class="gb9">9</div>
-      <div class="gbx">x</div>
-      <div class="gb4">4</div>
-      <div class="gb5">5</div>
-      <div class="gb6">6</div>
-      <div class="gb-">-</div>
-      <div class="gb1">1</div>
-      <div class="gb1">2</div>
-      <div class="gb1">3</div>
-      <div class="gb+">+</div>
-      <div class="gb0">0</div>
-      <div class="gb.">.</div>
-      <div class="gb=">=</div>
-    </div>
+    <!-- <div class="calculatorGrid"> -->
+    <div class="gbbb">blank box</div>
+    <div class="gbac">AC</div>
+    <div class="gbps">±</div>
+    <div class="gbp">%</div>
+    <div class="gbd">÷</div>
+    <div class="gb7">7</div>
+    <div class="gb8">8</div>
+    <div class="gb9">9</div>
+    <div class="gbx">x</div>
+    <div class="gb4">4</div>
+    <div class="gb5">5</div>
+    <div class="gb6">6</div>
+    <div class="gbm">-</div>
+    <div class="gb1">1</div>
+    <div class="gb2">2</div>
+    <div class="gb3">3</div>
+    <div class="gbplus">+</div>
+    <div class="gb0">0</div>
+    <div class="gbdot">.</div>
+    <div class="gbequals">=</div>
+    <!-- </div> -->
   </body>
   <script src="./app.js"></script>
 </html>
