--- a/index.html
+++ b/index.html
@@ -8,28 +8,28 @@
     <link rel="stylesheet" href="./Style/style.css" />
   </head>
   <body>
-    <!-- <div class="calculatorGrid"> -->
-    <div class="gbbb">blank box</div>
-    <div class="gbac">AC</div>
-    <div class="gbps">±</div>
-    <div class="gbp">%</div>
-    <div class="gbd">÷</div>
-    <div class="gb7">7</div>
-    <div class="gb8">8</div>
-    <div class="gb9">9</div>
-    <div class="gbx">x</div>
-    <div class="gb4">4</div>
-    <div class="gb5">5</div>
-    <div class="gb6">6</div>
-    <div class="gbm">-</div>
-    <div class="gb1">1</div>
-    <div class="gb2">2</div>
-    <div class="gb3">3</div>
-    <div class="gbplus">+</div>
-    <div class="gb0">0</div>
-    <div class="gbdot">.</div>
-    <div class="gbequals">=</div>
-    <!-- </div> -->
+    <div class="calculatorGrid">
+      <div class="calculatorButton" id="gbbb">blank box</div>
+      <div class="calculatorButton" id="gbac">AC</div>
+      <div class="calculatorButton" id="gbps">±</div>
+      <div class="calculatorButton" id="gbp">%</div>
+      <div class="calculatorButton" id="gbd">÷</div>
+      <div class="calculatorButton" id="gb7">7</div>
+      <div class="calculatorButton" id="gb8">8</div>
+      <div class="calculatorButton" id="gb9">9</div>
+      <div class="calculatorButton" id="gbx">x</div>
+      <div class="calculatorButton" id="gb4">4</div>
+      <div class="calculatorButton" id="gb5">5</div>
+      <div class="calculatorButton" id="gb6">6</div>
+      <div class="calculatorButton" id="gbm">-</div>
+      <div class="calculatorButton" id="gb1">1</div>
+      <div class="calculatorButton" id="gb2">2</div>
+      <div class="calculatorButton" id="gb3">3</div>
+      <div class="calculatorButton" id="gbplus">+</div>
+      <div class="calculatorButton" id="gb0">0</div>
+      <div class="calculatorButton" id="gbdot">.</div>
+      <div class="calculatorButton" id="gbequals">=</div>
+    </div>
   </body>
   <script src="./app.js"></script>
 </html>
