--- a/index.html
+++ b/index.html
@@ -10,27 +10,27 @@
   <body>
     <main>
       <section>
-        <div class="calculatorButton" id="gbbb">blank box</div>
+        <div class="calculatorButton" id="gbbb"></div>
         <div class="calculatorGrid">
-          <div class="calculatorButton" id="gbac">AC</div>
-          <div class="calculatorButton" id="gbps">±</div>
-          <div class="calculatorButton" id="gbp">%</div>
-          <div class="calculatorButton" id="gbd">÷</div>
-          <div class="calculatorButton" id="gb7">7</div>
-          <div class="calculatorButton" id="gb8">8</div>
-          <div class="calculatorButton" id="gb9">9</div>
-          <div class="calculatorButton" id="gbx">x</div>
-          <div class="calculatorButton" id="gb4">4</div>
-          <div class="calculatorButton" id="gb5">5</div>
-          <div class="calculatorButton" id="gb6">6</div>
-          <div class="calculatorButton" id="gbm">-</div>
-          <div class="calculatorButton" id="gb1">1</div>
-          <div class="calculatorButton" id="gb2">2</div>
-          <div class="calculatorButton" id="gb3">3</div>
-          <div class="calculatorButton" id="gbplus">+</div>
-          <div class="calculatorButton" id="gb0">0</div>
-          <div class="calculatorButton" id="gbdot">.</div>
-          <div class="calculatorButton" id="gbequals">=</div>
+          <button class="calculatorButton" id="gbac">AC</button>
+          <button class="calculatorButton" id="gbps">±</button>
+          <button class="calculatorButton" id="gbp">%</button>
+          <button class="calculatorButton" id="gbd">÷</button>
+          <button class="calculatorButton" id="gb7">7</button>
+          <button class="calculatorButton" id="gb8">8</button>
+          <button class="calculatorButton" id="gb9">9</button>
+          <button class="calculatorButton" id="gbx">x</button>
+          <button class="calculatorButton" id="gb4">4</button>
+          <button class="calculatorButton" id="gb5">5</button>
+          <button class="calculatorButton" id="gb6">6</button>
+          <button class="calculatorButton" id="gbm">-</button>
+          <button class="calculatorButton" id="gb1">1</button>
+          <button class="calculatorButton" id="gb2">2</button>
+          <button class="calculatorButton" id="gb3">3</button>
+          <button class="calculatorButton" id="gbplus">+</button>
+          <button class="calculatorButton" id="gb0">0</button>
+          <button class="calculatorButton" id="gbdot">.</button>
+          <button class="calculatorButton" id="gbequals">=</button>
         </div>
       </section>
     </main>
