--- a/index.html
+++ b/index.html
@@ -13,22 +13,22 @@
         <div class="calculatorButton" id="gbbb"></div>
         <div class="calculatorGrid">
           <button class="calculatorButton" id="gbac">AC</button>
-          <button class="calculatorButton" id="gbps">±</button>
-          <button class="calculatorButton" id="gbp">%</button>
-          <button class="calculatorButton" id="gbd">÷</button>
-          <button class="calculatorButton" id="gb7">7</button>
-          <button class="calculatorButton" id="gb8">8</button>
-          <button class="calculatorButton" id="gb9">9</button>
-          <button class="calculatorButton" id="gbx">x</button>
-          <button class="calculatorButton" id="gb4">4</button>
-          <button class="calculatorButton" id="gb5">5</button>
-          <button class="calculatorButton" id="gb6">6</button>
-          <button class="calculatorButton" id="gbm">-</button>
-          <button class="calculatorButton" id="gb1">1</button>
-          <button class="calculatorButton" id="gb2">2</button>
-          <button class="calculatorButton" id="gb3">3</button>
-          <button class="calculatorButton" id="gbplus">+</button>
-          <button class="calculatorButton" id="gb0">0</button>
+          <button class="operatorBtn" id="gbps">±</button>
+          <button class="operatorBtn" id="gbp">%</button>
+          <button class="operatorBtn" id="gbd">÷</button>
+          <button class="numBtn" id="gb7">7</button>
+          <button class="numBtn" id="gb8">8</button>
+          <button class="numBtn" id="gb9">9</button>
+          <button class="operatorBtn" id="gbx">x</button>
+          <button class="numBtn" id="gb4">4</button>
+          <button class="numBtn" id="gb5">5</button>
+          <button class="numBtn" id="gb6">6</button>
+          <button class="operatorBtn" id="gbm">-</button>
+          <button class="numBtn" id="gb1">1</button>
+          <button class="numBtn" id="gb2">2</button>
+          <button class="numBtn" id="gb3">3</button>
+          <button class="operatorBtn" id="gbplus">+</button>
+          <button class="numBtn" id="gb0">0</button>
           <button class="calculatorButton" id="gbdot">.</button>
           <button class="calculatorButton" id="gbequals">=</button>
         </div>
