--- a/index.html
+++ b/index.html
@@ -13,21 +13,19 @@
         <div class="calculatorButton" id="gbbb"></div>
         <div class="calculatorGrid">
           <button class="calculatorButton" id="gbac">AC</button>
-          <button class="operatorBtnPM" id="gbps">±</button>
-          <button class="operatorBtnPercent" id="gbp">%</button>
-          <button class="operatorBtnDivide" id="gbd">÷</button>
+          <button class="operator" id="gbd">÷</button>
           <button class="numBtn" id="gb7">7</button>
           <button class="numBtn" id="gb8">8</button>
           <button class="numBtn" id="gb9">9</button>
-          <button class="operatorBtnMultiply" id="gbx">x</button>
+          <button class="operator" id="gbx">x</button>
           <button class="numBtn" id="gb4">4</button>
           <button class="numBtn" id="gb5">5</button>
           <button class="numBtn" id="gb6">6</button>
-          <button class="operatorBtnMinus" id="gbm">-</button>
+          <button class="operator" id="gbm">-</button>
           <button class="numBtn" id="gb1">1</button>
           <button class="numBtn" id="gb2">2</button>
           <button class="numBtn" id="gb3">3</button>
-          <button class="operatorBtnPlus" id="gbplus">+</button>
+          <button class="operator" id="gbplus">+</button>
           <button class="numBtn" id="gb0">0</button>
           <button class="dotBtn" id="gbdot">.</button>
           <button class="equalsBtn" id="gbequals">=</button>
