operators code added

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <button class="numBtn" id="gb3">3</button>
           <button class="operator" id="gbplus">+</button>
           <button class="numBtn" id="gb0">0</button>
-          <button class="dotBtn" id="gbdot">.</button>
+          <button class="numBtn" id="gbdot">.</button>
           <button class="equalsBtn" id="gbequals">=</button>
         </div>
       </section>
